
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2023 OCT 06a
  * in cycle/share/cycle_share.c
    - in add_to_averaged_rates(), now calls find_Sstar() instead of find_Schem()
  * in model/chem/_NH3_Plasma_10s/bavafa2008.c
    - made reactions 1-4 implicit again
  * renamed:
    - _AVERAGEDRATES to _AVERAGEDRATES_CHEM
    - numaveragedrates to numaveragedrates_chem
    - averagedrates_react to averagedrates_chem_id
  * in model/fluid/_Navier-Stokes_plasma/fluid.hh
    - added _AVERAGEDRATES section
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - in find_Semfield(), now calls _averaged_rate() when calculating S[fluxet]
  * in model/share/chem_share.c
    - removed _averaged_rate()
  * in model/share/model_share.c
    - added _averaged_rate() with modifications to handle the fluid (not only the chem) averaged
      rates
  * in src/common.h
    - added #define numaveragedrates (numaveragedrates_chem+numaveragedrates_fluid)
    

2023 OCT 05c
  * in model/chem/_NH3_Plasma_10s/chem.hh
    - added missing 3 and 4 to averagedrates_react


2023 OCT 05b
  * in model/chem/_NH3_Plasma_10s/bavafa2008.c
    - added _average_rates() calls to reactions 3 and 4
    - removed the implicit treatment of reactions 1-4
    

2023 OCT 05a
  * in cycle/share/cycle_share.c
    - in setup_multizone(), set ks and ke to 0 when in 2D mode (to avoid a valgrind complaint)
  * in src/common.c
    - in find_subzones_in_zone_given_zonelength(), set ks and ke to 0 when in 2D mode 
      (to avoid a valgrind complaint)
    

2023 OCT 04a
  * in model/chem/
    - added _NH3_Plasma_34s/
  * in model/share/chem_share.c
    - added functions add_to_W_fw_2r4p() and add_to_dW_fw_2r4p()
  * in model/thermo/_generic/enthalpy.c and model/thermo/_generic/thermo.c and